--- a/View/CSS/general.css
+++ b/View/CSS/general.css
@@ -104,25 +104,11 @@ h1 {
     border-radius: 3px;
 }
 
-.save-btn {
-    padding: 10px 20px;
-    background: #268289;
-    background: -moz-linear-gradient(top, #268289 0%, #15404c 100%);
-    background: -webkit-linear-gradient(top, #268289 0%, #15404c 100%);
-    background: linear-gradient(to bottom, #268289 0%, #15404c 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#268289', endColorstr='#15404c', GradientType=0);
-    border: none;
-    color: #fff;
-    font-family: 'Nunito', sans-serif;
-    border-radius: 3px;
-}
-
 .submit-btn:hover,
 .save-btn:hover {
     cursor: pointer;
     transform: scale(0.95);
 }
-
 
 /* Table */
 table {
@@ -132,12 +118,12 @@ table {
     border-collapse: collapse;
 }
 
- table td,
+table td,
 table th {
-    padding: 10px 10px;
+    padding: 10px 10px 0px 10px;
     border: 1px solid #000000;
-    width: 300px;
-} 
+    width: 250px;
+}
 
 /* Wrappers */
 .wrapper-90 {
