--- a/View/CSS/general.css
+++ b/View/CSS/general.css
@@ -110,6 +110,25 @@ h1 {
     transform: scale(0.95);
 }
 
+a.deco-btn {
+    padding: 10px 15px;
+    background: #2e6e3f;
+    background: -moz-linear-gradient(top, #2e6e3f 0%, #124c31 100%);
+    background: -webkit-linear-gradient(top, #2e6e3f 0%, #124c31 100%);
+    background: linear-gradient(to bottom, #2e6e3f 0%, #124c31 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2e6e3f', endColorstr='#0f3f29', GradientType=0);
+    border: none;
+    color: #fff;
+    font-family: 'Nunito', sans-serif;
+    border-radius: 3px;
+    text-decoration: none;
+}
+
+a.deco-btn:hover {
+    cursor: pointer;
+    transform: scale(0.95);
+}
+
 /* Table */
 table {
     margin: auto;
